# courtreserve

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/courtreserve-cli/: SKILL.md
skills/courtreserve-cli/agents/: openai.yaml
src/courtreserve/: __init__.py  cli.py  client.py  errors.py  models.py  parsers.py  renderers.py  request_builder.py  service.py
tests/: test_cli.py  test_client.py  test_live.py  test_parsers.py  test_request_builder.py  test_service.py
tests/fixtures/: calendar.json  calendar_page.html  organization.html
