[project]
name = "courtreserve-cli"
version = "0.1.0"
description = "Read-only CLI for public CourtReserve event calendars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.8",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
courtreserve = "courtreserve.cli:run"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/courtreserve"]

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: requires network access to CourtReserve"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["courtreserve"]
