[project]
name = "courtreserve-cli"
dynamic = ["version"]
description = "Read-only CLI for public CourtReserve event calendars"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ethan Yang", email = "yang-yifeng@hotmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["courtreserve", "cli", "calendar", "events"]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.8",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/yangyf1994/courtreserve"
Repository = "https://github.com/yangyf1994/courtreserve"
Issues = "https://github.com/yangyf1994/courtreserve/issues"

[project.scripts]
courtreserve = "courtreserve.cli:run"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/courtreserve"]

[tool.hatch.version]
path = "src/courtreserve/__init__.py"

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: requires network access to CourtReserve"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["courtreserve"]
